--- a/app/src/main/res/layout/activity_result_page.xml
+++ b/app/src/main/res/layout/activity_result_page.xml
@@ -7,15 +7,23 @@
     tools:context="com.moment.themoment.ResultPageActivity">
 
     <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="125dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:id="@+id/Results"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:baselineAligned="false">
+            android:layout_height="match_parent"
+            android:layout_marginBottom="32dp"
+            android:baselineAligned="false"
+            android:gravity="top"
+            android:orientation="horizontal">
 
             <LinearLayout
                 android:id="@+id/NameList"
@@ -27,7 +35,7 @@
                 <TextView
                     android:id="@+id/Names"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="@string/names"
                     android:textAlignment="center"
@@ -45,7 +53,7 @@
                 <TextView
                     android:id="@+id/Scores"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="@string/scores"
                     android:textAlignment="center"
@@ -56,4 +64,29 @@
         </LinearLayout>
 
     </ScrollView>
+
+    <Button
+        android:id="@+id/NewRound"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginBottom="12dp"
+        android:layout_marginEnd="16dp"
+        android:layout_weight="1"
+        android:onClick="JumptoWriteClaim"
+        android:text="@string/NewRound"
+        app:layout_constraintBottom_toTopOf="@+id/Quit"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/Quit"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="24dp"
+        android:layout_weight="1"
+        android:onClick="JumptoMainMenu"
+        android:text="@string/Quit"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
