--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,6 +52,7 @@
             android:onClick="joinRoom"
             android:text="@string/Join_Room_Button"
             android:textSize="18sp"
+            android:background="@drawable/buttons"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
