--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#c36685</color>
+    <color name="colorAccent">#408cff</color>
     <color name="accent_material_light">#003df5</color>
+    <color name="foreground_material_light">#0c3891</color>
 </resources>
