--- a/app/src/main/res/layout/activity_join_random_room.xml
+++ b/app/src/main/res/layout/activity_join_random_room.xml
@@ -29,6 +29,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text=""
+        android:textAlignment="center"
         android:textSize="36sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
