--- a/app/src/main/res/layout/activity_wait_for_claim.xml
+++ b/app/src/main/res/layout/activity_wait_for_claim.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.moment.themoment.WaitForClaim">
+    tools:context="com.moment.themoment.WaitForClaimActivity">
 
     <ProgressBar
         android:id="@+id/progress"
