--- a/app/src/main/res/layout/activity_wait_for_players.xml
+++ b/app/src/main/res/layout/activity_wait_for_players.xml
@@ -37,12 +37,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
+        android:layout_marginTop="16dp"
         android:textColor="?attr/actionModeSplitBackground"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.512"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="24dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/numberOfPlayersJoined"
@@ -51,7 +52,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:text="0"
+        android:text="@string/zero"
         android:textColor="?attr/actionModeSplitBackground"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
