--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,11 +9,10 @@
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/rootRL"
-        android:orientation="horizontal"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:background="@drawable/background">
-    </RelativeLayout>
+        android:background="@drawable/background"
+        android:orientation="horizontal"></RelativeLayout>
 
     <LinearLayout
         android:id="@+id/linearLayout"
