--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,6 +46,7 @@
         <ImageButton
             android:id="@+id/CreateRoom"
             android:layout_width="match_parent"
+            android:layout_height="0dp"
             android:layout_weight="0.3"
             android:background="@android:color/transparent"
             android:contentDescription="@string/createRoom"
@@ -56,6 +57,7 @@
         <ImageButton
             android:id="@+id/JoinRoom"
             android:layout_width="match_parent"
+            android:layout_height="0dp"
             android:layout_weight="0.3"
             android:background="@android:color/transparent"
             android:contentDescription="@string/Join_Room_Button"
@@ -66,6 +68,7 @@
         <ImageButton
             android:id="@+id/JRR"
             android:layout_width="match_parent"
+            android:layout_height="0dp"
             android:layout_weight="0.3"
             android:background="@android:color/transparent"
             android:contentDescription="@string/Join_Random_Room_Button"
